--- a/notebooks/export.ipynb
+++ b/notebooks/export.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tissue map rerun export\n",
+    "- create dataframe for new rerun data\n",
+    "- previous table deleted in postgres to avoid conflicts\n",
     "----\n",
-    "# Sex\n",
+    "- rerun after fixing bugs for multiple matches in single source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the results of the tissue_map into a single dataframe \n",
+    "tissue_df_1 = pd.read_json('../../data/results/tissue_output_1_rerun.jsonl', lines=True)\n",
+    "tissue_df_2 = pd.read_json('../../data/results/tissue_output_2_rerun.jsonl', lines=True)\n",
+    "tissue_df = pd.concat([tissue_df_1, tissue_df_2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "220    BTO_0000725\\tBTO_0001413\n",
+      "Name: bto_matches, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tissue_df[tissue_df['biosample_id'] == \"SAMN00002389\"][\"bto_matches\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tissue', 'cell_type', 'cell_type']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {\"biosample_id\": \"SAMN04571587\", \"sra_id\": \"\", \"source\": \"tissue\\tcell_type\\tcell_type\", \"text\": \"ear\\tear fibroblast culture, passage 3\\tear fibroblast culture, passage 3\", \"tissue\": \"ear\\tear\\tfibroblast\", \"bto_matches\": \"BTO_0000368\\tBTO_0000368\\tBTO_0000452\"}\n",
+    "a[\"source\"].split(\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_to_file(writer, row):\n",
+    "    biosample_id = row['biosample_id']\n",
+    "    srs_id = row['sra_id']\n",
+    "    tissue = row['tissue']\n",
+    "    source = row['source']\n",
+    "    text = row['text']\n",
+    "    bto_id = row['bto_matches']\n",
+    "    # store a set of existing bto_ids to avoid duplicates\n",
+    "    existing_matches = set()\n",
+    "    for source_split, text_split, tissue_split, bto_id_split in zip(source.split('\\t'), text.split('\\t'), tissue.split('\\t'), bto_id.split('\\t')):\n",
+    "        # skip if the tissue has already been identified\n",
+    "        if bto_id_split in existing_matches:\n",
+    "            continue\n",
+    "        else:\n",
+    "            writer.writerow([biosample_id, srs_id, source_split, text_split, tissue_split, bto_id_split])\n",
+    "            existing_matches.add(bto_id_split)\n",
+    "\n",
+    "\n",
+    "with open('../exports/tissue_map_rerun.csv', 'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(['biosample_id', 'srs_id', 'source', 'text', 'tissue', 'bto_id'])\n",
+    "    tissue_df.apply(lambda row: write_to_file(writer, row), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gonzalez et al \"genomic analysis provides insights into the functional capacity of soil bacteria communities inhabiting an altitudinal gradient in the atacama desert.\" microbiome journal (to be submitted)', ''],soil alkaline flat,soil metagenome\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in (tissue_df[tissue_df['biosample_id'] == 'SAMN18623547']['text']):\n",
+    "    print(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "samples like 'SAMEA112151282' cause issues where a large experiment description is included in the xml. Returns multiple different hits:\n",
+    "\n",
+    "- ovary\n",
+    "- digestive tube \n",
+    "- bile\n",
+    "- gut\n",
+    "- feces\n",
+    "- digestive system\n",
+    "- liver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "## Sex\n",
     "- sex_output file has a line for each biosample \n",
     "- each line can be directly written to a csv for postgres"
    ]
